--- a/index.html
+++ b/index.html
@@ -2,44 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PriceTrack Dashboard</title>
+  <title>PriceTrack Online Market</title>
 
-  <!-- 引入 Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <!-- 你之前的 Bootstrap 可以留着，用来保证表格/排版兼容 -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  >
+
+  <!-- 自己的样式文件 -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div class="container my-4">
-    <!-- 主标题 -->
-    <h1 class="mb-3">PriceTrack Dashboard</h1>
-    <p class="text-muted">IST 615 Azure price comparison project.</p>
+  <div class="pt-page">
 
-    <!-- 当前价格区域 -->
-    <h3 class="mt-4">Current Prices</h3>
-    <div class="row my-3" id="current-prices">
-      <!-- JS 会在这里插入价格卡片 -->
-    </div>
+    <!-- 顶部 header -->
+    <header class="pt-header container">
+      <div class="pt-header-left">
+        <div class="pt-logo-box">
+          <span class="pt-logo-icon">🛒</span>
+        </div>
+        <div>
+          <h1 class="pt-title">PriceTrack Online Market</h1>
+          <p class="pt-subtitle">Real-time grocery price intelligence</p >
+        </div>
+      </div>
+      <div class="pt-header-right">
+        <span class="pt-store-chip pt-store-amazon">Amazon</span>
+        <span class="pt-store-chip pt-store-walmart">Walmart</span>
+      </div>
+    </header>
 
-    <!-- 刷新时间 -->
-    <p id="last-updated" class="text-muted small"></p>
+    <!-- 内容主体 -->
+    <main class="pt-main container">
 
-    <!-- 历史价格表 -->
-    <h3 class="mt-4">Price History</h3>
-    <table class="table table-striped" id="history-table">
-      <thead>
-        <tr>
-          <th>Timestamp (UTC)</th>
-          <th>Website</th>
-          <th>Price</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- JS 会在这里插入表格行 -->
-      </tbody>
-    </table>
+      <!-- 当前价格 -->
+      <section class="pt-section">
+        <div class="pt-section-header">
+          <div>
+            <h2 class="pt-section-title">Current Prices</h2>
+            <p class="pt-section-desc">Compare prices across major retailers</p >
+          </div>
+          <p id="last-updated" class="pt-last-updated text-muted small"></p >
+        </div>
+
+        <!-- 商品卡片区域，JS 会往这里插内容 -->
+        <div id="current-prices" class="pt-card-grid">
+          <!-- JS 动态插入 -->
+        </div>
+      </section>
+
+      <!-- 历史价格 -->
+      <section class="pt-section">
+        <h2 class="pt-section-title mb-2">Price History</h2>
+        <p class="pt-section-desc mb-3">
+          Recent price updates across all tracked items
+        </p >
+
+        <div class="card shadow-sm border-0 pt-history-card">
+          <div class="card-body p-0">
+            <div class="table-responsive">
+              <table class="table mb-0" id="history-table">
+                <thead class="table-light">
+                  <tr>
+                    <th>Timestamp (UTC)</th>
+                    <th>Store</th>
+                    <th>Item</th>
+                    <th class="text-end">Price</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- JS 会在这里插入行 -->
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <p class="text-center text-muted small pt-footer-updated">
+          <!-- 这里也可以用 JS 写一遍 last updated，如果你想的话 -->
+        </p >
+      </section>
+
+    </main>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
-
